# market-regime-engine

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  RELEASE_IMPORT.md  build_zip.py  mypy_baseline.txt  pyproject.toml  requirements-lock.bayesian-cpu-linux.hash  requirements-lock.bayesian-cpu-linux.txt  requirements-lock.core.hash  requirements-lock.dashboard.hash  requirements-lock.dashboard.txt  requirements-lock.frontier-cpu-linux.hash  requirements-lock.frontier-cpu-linux.txt  requirements-lock.txt
.github/workflows/: ci.yml  prediction-evidence.yml
config/: release_calendar.yaml  series_catalog.yaml
config/release_calendars/: bea.yaml  bls.yaml  census.yaml  fed.yaml
data/calendars/: sifma_bond.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_REFACTOR_BOUNDARY.md  BASELINE_MODEL_ZOO.md  DESIGN.md  HANDOFF.md  IMPLEMENTATION_PLAN_FROM_FINDINGS.md  INSTRUCTIONS.md  MATHEMATICS_USED.md  MATH_METHODS.md  METHOD_CARD_INDEX.md  MODEL_RISK.md  NUMERIC_CONTRACT.md  POINT_IN_TIME_LEAKAGE_AUDIT.md  PRAGMA_GRADE_TARGET.md  PREDICTION_EVIDENCE_CI.md  PRODUCT_IDENTITY.md  REVIEW_HARDENING_IMPLEMENTATION.md  SECOND_OPINION_REVIEW.md  SOTA_PREDICTION_ENGINE_BLUEPRINT.md  UPGRADE_PATH.md  V0_3_UPGRADE.md  V0_4_UPGRADE.md  V0_5_UPGRADE.md  V0_6_UPGRADE.md  V0_7_UPGRADE.md  V0_8_UPGRADE.md  V1_0_UPGRADE.md  V1_1_FIXES.md  V1_2_1_FIXES.md  V1_2_FRONTIER.md  V1_3_RELEASE.md  V1_4_1_FIXES.md  V1_4_RELEASE.md  V1_5_AUTOX_CONTRACT.md  V1_5_BREAKING_CHANGES.md  V1_5_FIXED_INCOME_RCIE.md  V1_5_GOVERNED_SIGNAL_LAYER.md  V1_5_HMAC_OPERATIONS.md  V1_6_ENGINEERING_PLAN.md  V1_6_FRONTIER_MATH_HARDENING.md  (+11 more)
docs/components/: credit_spread_regime.md  evidence_pack.md  execution_confidence.md  liquidity_stress.md  tca_segmentation.md
docs/method_cards/: bayesian_msvar.md  conformal.md  credit_spread_regime.md  dfm_mq.md  execution_confidence.md  gw.md  hmm.md  liquidity_stress.md  mcs.md  msvar.md  protocol_recommendation.md  xpro_decision_artifact.md
examples/: sample_order.json
rust_ext/: Cargo.toml  README.md
rust_ext/src/: lib.rs
scripts/: add_spdx_headers.py  bench_latest_credit_regime.py  build_audit_zip.py  build_release.py  build_v141_release_bundle.py  build_xpro_certification_fixture.py  check_readme_version.py  compare_asof_implementations.py  refresh_build_status.py  run_prediction_benchmark.py  v141_capture_verify_demos.py  v14_capture_verify_demos.py
src/market_regime_engine/: __init__.py  alerts.py  alerts_sinks.py  alfred.py  alfred_real.py  analogs.py  analogs_v2.py  analytics_warehouse.py  api.py  api_v1.py  asof.py  attribution.py  backtest.py  baselines.py  bench.py  bma.py  bocpd.py  bocpd_hazard.py  bocpd_muse.py  calibration.py  certification_report.py  changepoint.py  cli.py  cli_dispatch.py  cli_handlers.py  cli_helpers.py  cli_parser.py  confidence.py  config.py  conformal.py  counterfactual.py  cross_sectional.py  dashboard.py  data_contracts.py  data_sources.py  dfm.py  drift.py  ensemble.py  ensemble_v2.py  evidence_common.py  (+56 more)
src/market_regime_engine/adapters/: __init__.py  core.py  lean.py  openbb.py  pyportfolioopt.py  vectorbt.py
src/market_regime_engine/core/: __init__.py
src/market_regime_engine/fixed_income/: README.md  __init__.py  api.py  api_cache.py  api_handlers.py  api_middleware.py  api_schemas.py  bps_precision.py  calendars.py  cli.py  correlation.py  credit_spread_regime.py  critical_features.py  dashboard_tab.py  evidence_pack.py  execution_calibration.py  execution_confidence.py  execution_validation.py  feature_builders.py  hashing.py  hysteresis.py  liquidity_stress.py  middleware.py  numeric_contracts.py  observability_ext.py  pit_guard.py  posterior_mode.py  protocol_recommendation.py  report.py  schema.py  schemas.py  tca_outcome_lag.py  tca_segmentation.py  timestamps.py  validation.py  xpro_decision.py
src/market_regime_engine/frontier/: __init__.py  bayesian_msvar.py  conformal_ts.py  data_cleaning.py  deep_kernel.py  dfm_mq.py  diagnostics.py  distributional.py  experimental.py  gp_cpd.py  hierarchical_liquidity.py  midas.py  neural_seq.py  online_conformal.py  overfit_control.py  release_calendars.py  sequential_testing.py
src/market_regime_engine/models/: __init__.py  base.py  baselines.py  classification.py  fi_baselines.py  gradient_boosting.py  legacy.py  linear_quantile.py  registry.py  regression.py
tests/: test_alfred_real_recorded.py  test_api_legacy_gate.py  test_api_v1_body_size_cap.py  test_api_v1_cache_lazy_init.py  test_api_v1_db_path_default.py  test_api_v1_hardening.py  test_api_v1_load_smoke.py  test_api_v1_pooled_warehouse.py  test_api_v1_pydantic_validation.py  test_api_v1_rate_limit.py  test_api_v1_redis_cache_no_pickle.py  test_api_v1_timestamp_utc_coercion.py  test_asof_join_release_gate.py  test_asof_perf.py  test_asof_subdaily_grid.py  test_backtest_horizon_parsing.py  test_backtest_purged.py  test_bayesian_msvar.py  test_bocpd_uses_nan_policy.py  test_body_size_middleware.py  test_canonical_json_rfc8785.py  test_certification_frontier_diagnostics.py  test_certification_import_boundary.py  test_certification_release_and_execution_validation.py  test_certification_report.py  test_check_duckdb_writers.py  test_check_readme_version_script.py  test_conformal.py  test_conformal_coverage.py  test_core.py  test_core_table_indexes.py  test_correlation_id_middleware.py  test_credit_regime_api_endpoint.py  test_credit_regime_cli.py  test_credit_regime_idx_explain.py  test_credit_regime_no_collapse_onto_hmm_states.py  test_credit_regime_pit_audit_vectorized.py  test_credit_regime_release_gate.py  test_credit_spread_regime.py  test_dealer_response_stats_indexed_read.py  (+149 more)
tests/fixtures/alfred/: README.md
tests/fixtures/prediction_evidence/: binary_oos_bad_calibration.csv  binary_oos_good.csv  quantile_oos_bad_coverage.csv  quantile_oos_good.csv
tests/fixtures/release_calendars/: bea_fixture.html  bls_fixture.html  census_fixture.html  fed_fixture.html
tests/golden/: regime_trace.csv
tools/: check_duckdb_writers.py
(+4 files in other folders)
