[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-regime-engine"
version = "1.4.1"
description = "Governed macro regime signal layer with PIT lineage and adapter exports"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "requests>=2.31",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.33", "plotly>=5.20"]
analytics = ["duckdb>=1.0", "pyarrow>=15.0", "polars>=0.20"]
nowcast = ["statsmodels>=0.14", "scipy>=1.10"]
frontier = ["statsmodels>=0.14", "ngboost>=0.5", "torch>=2.0"]
explain = ["shap>=0.44"]
observability = ["prometheus-client>=0.20", "structlog>=24.1"]
security = [
  "cyclonedx-bom>=4.0",
  "pip-licenses>=4.0",
  "bandit>=1.7",
]
redis = ["redis>=5.0"]
bayesian = ["numpyro>=0.13", "jax[cpu]>=0.4", "arviz>=0.17"]
scraping = ["beautifulsoup4>=4.12", "lxml>=5.0"]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "build>=1.2",
  "types-requests",
  "types-PyYAML",
  "vcrpy>=6.0",
  "fakeredis>=2.20",
  "responses>=0.25",
  "requests-mock>=1.11",
]

[project.scripts]
mre = "market_regime_engine.cli:main"
mre-validation-pack = "market_regime_engine.validation_pack_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: long-running test (deselect with '-m \"not slow\"')",
  "network: requires live network (off by default in CI)",
  "rust: requires the compiled rust extension",
  "golden: golden-master regression tests",
]
filterwarnings = [
  "error::DeprecationWarning:market_regime_engine",
  "ignore::DeprecationWarning:dateutil",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["data", ".venv", "rust_ext/target"]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "RET",
  "PERF",
  "RUF",
]
ignore = [
  "E501",
  "B008",
  "SIM108",
  "RUF002",
  "PERF401",
  "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F841", "PERF", "E402"]
"src/market_regime_engine/cli.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["src/market_regime_engine"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true
plugins = []
exclude = ["build/", "dist/", "data/"]

[[tool.mypy.overrides]]
module = "market_regime_engine.bocpd"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.hmm"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.wfst"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.conformal"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.walk_forward"
disallow_untyped_defs = true
