[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-regime-engine"
version = "1.5.0"
description = "Python-first, Rust-ready macro/market regime intelligence engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "requests>=2.31",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.33", "plotly>=5.20"]
analytics = ["duckdb>=1.0", "pyarrow>=15.0", "polars>=0.20"]
nowcast = ["statsmodels>=0.14", "scipy>=1.10"]
frontier = ["statsmodels>=0.14", "ngboost>=0.5", "torch>=2.0"]
explain = ["shap>=0.44"]
observability = [
  "prometheus-client>=0.20",
  "structlog>=24.1",
  # v1.5 PR-7 §E (AF-4): OpenTelemetry SDK + OTLP exporter for cross-
  # worker metric aggregation. Marked optional so a vanilla install
  # keeps the in-process registry path. When the deps are present
  # ``observability.configure_otel(...)`` lights up the OTLP path; the
  # legacy ``_GLOBAL.incr`` / ``record_histogram`` API stays as the
  # fall-back adapter.
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
  "opentelemetry-exporter-otlp>=1.30",
  "opentelemetry-instrumentation-fastapi>=0.51b0",
]
# v1.5 (PR-3 task D.3): optional pandas_market_calendars adapter for
# the SIFMA bond calendar. The hand-curated YAML at
# data/calendars/sifma_bond.yaml is the audit-grade fallback; pmc is
# only consulted when MRE_FI_USE_PMC=1 is set so a stale pmc install
# on a dev laptop cannot override the reference YAML.
fixed_income = ["pandas-market-calendars>=4.4"]
# v1.3 supply-chain hardening: SBOM, license audit, and static
# security scan tooling. Pinned to broad ranges so the CI matrix
# can refresh without bumping pyproject every minor.
#
# v1.5.1 (PR-9 FIX 1): the slowapi rate limiter is part of the
# ``[security]`` extra because POST /v1/execution_confidence relies
# on it when ``MRE_FI_RATE_LIMIT_ENABLED=1``. The FastAPI startup
# guard in :mod:`fixed_income.api` raises RuntimeError when the
# env var is set but slowapi is not installed so production cannot
# silently degrade to an unlimited handler.
security = [
  "cyclonedx-bom>=4.0",
  "pip-licenses>=4.0",
  "bandit>=1.7",
  "slowapi>=0.1.9",
]
# v1.3 shared API cache. Optional because Redis is environment-conditional;
# the local TTL cache is the default and remains zero-dependency.
redis = ["redis>=5.0"]
# v1.4 (item A) Bayesian NumPyro MS-VAR. Platform-conditional like
# ``[frontier]`` because JAX wheels split CUDA/CPU/Apple-silicon.
# ``jax[cpu]`` is the lockable variant; CUDA / TPU stays
# operator-installed.
bayesian = ["numpyro>=0.13", "jax[cpu]>=0.4", "arviz>=0.17"]
# v1.4 (item D) live release calendar fetchers. Pulled in only when
# the operator runs ``mre refresh-release-calendars``; the engine
# ships hand-curated YAML so the import is gated behind the optional
# extra.
scraping = ["beautifulsoup4>=4.12", "lxml>=5.0"]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "build>=1.2",
  "types-requests",
  "types-PyYAML",
  # v1.3: vcrpy records ALFRED HTTP fixtures so the PIT ingestion path
  # can be exercised in CI without network access; fakeredis backs the
  # /v1 API Redis cache parametrized tests; responses + requests-mock
  # back the alert-sink HTTP transports.
  "vcrpy>=6.0",
  "fakeredis>=2.20",
  "responses>=0.25",
  "requests-mock>=1.11",
  # v1.5 (PR-2 task I.2): httpx is the transport that
  # fastapi.testclient.TestClient drives under the hood. Before PR-5
  # adds the POST /v1/execution_confidence Pydantic body validation
  # tests the FI dev profile already pulls it in for the api_v1 hardening
  # suite; pin here so a clean ``pip install -e .[dev]`` runs the test
  # client without an out-of-band ``pip install httpx`` step.
  "httpx>=0.27",
  # v1.5 (PR-3 task I): tabulate powers ``pd.DataFrame.to_markdown``
  # used by ``report_writer.consolidate``; PR-2 noted the
  # ``test_report_writer_consolidation_emits_known_sections`` test was
  # skipped on a clean dev install without it. Pinning here keeps the
  # dev profile self-contained.
  "tabulate>=0.9",
]

[project.scripts]
mre = "market_regime_engine.cli_dispatch:main"
mre-prediction-evidence = "market_regime_engine.prediction_evidence_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: long-running test (deselect with '-m \"not slow\"')",
  "network: requires live network (off by default in CI)",
  "rust: requires the compiled rust extension",
  "golden: golden-master regression tests",
]
filterwarnings = [
  "error::DeprecationWarning:market_regime_engine",
  "ignore::DeprecationWarning:dateutil",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["data", ".venv", "rust_ext/target"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "B",             # flake8-bugbear
  "UP",            # pyupgrade
  "SIM",           # flake8-simplify
  "C4",            # comprehensions
  "RET",           # return
  "PERF",          # perflint
  "RUF",
]
ignore = [
  "E501",          # handled by formatter
  "B008",          # function-call-in-default-argument (used by FastAPI/dataclasses)
  "SIM108",        # ternary-style
  "RUF002",        # ambiguous-unicode in docstrings (we use γ, σ, etc. on purpose)
  "PERF401",       # manual-list-comprehension — readability beats perf for our N
  # TrainingMode inherits from (str, Enum) as a stable v1.0 public type.
  # Switching to StrEnum is a Python 3.11+ API change that we keep
  # explicit-deferred until the next major bump.
  "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F841", "PERF", "E402"]
"src/market_regime_engine/cli.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["src/market_regime_engine"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true
plugins = []
exclude = ["build/", "dist/", "data/"]

[[tool.mypy.overrides]]
module = "market_regime_engine.bocpd"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.hmm"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.wfst"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.conformal"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "market_regime_engine.walk_forward"
disallow_untyped_defs = true
