[package]
name = "market_regime_engine_ext"
version = "0.2.0"
edition = "2021"

[lib]
name = "mre_rust_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
ndarray = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
